data: make the service drop off after 30 seconds of no modems
When we're be able to be lazily activated by D-Bus or udev seeing a
candidate, we should also drop off if there's no work for us anymore.

--- a/data/ModemManager.service.in
+++ b/data/ModemManager.service.in
@@ -4,7 +4,7 @@ Description=Modem Manager
 [Service]
 Type=dbus
 BusName=org.freedesktop.ModemManager1
-ExecStart=@sbindir@/ModemManager
+ExecStart=@sbindir@/ModemManager --idle-quit-seconds=30
 StandardError=null
 Restart=on-abort
 CapabilityBoundingSet=CAP_SYS_ADMIN
