net-port-mapper: store information of created net interfaces
Add a class to hold the information of net interfaces created inside
Modem Manager. This class is used to link the net interface and the
control port that was used to create it. Some new SoCs (i.e. Qrtr based)
allow the creation of net interfaces by userspace(i.e. ModemManager) and
these net interfaces show up as virtual net interfaces with incomplete
sysfs information. This class allows the probing and matching of those
interfaces with partial sysfs information.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -365,6 +365,8 @@ ModemManager_SOURCES = \
 	mm-plugin.c \
 	mm-plugin.h \
 	mm-shared.h \
+	mm-net-port-mapper.h \
+	mm-net-port-mapper.c \
 	$(NULL)
 
 if WITH_QRTR
