--- a/libmm-glib/Makefile.am
+++ b/libmm-glib/Makefile.am
@@ -30,6 +30,8 @@ libmm_glib_la_SOURCES = \
 	mm-modem-time.c \
 	mm-modem-firmware.h \
 	mm-modem-firmware.c \
+	mm-modem-sar.h \
+	mm-modem-sar.c \
 	mm-modem-signal.h \
 	mm-modem-signal.c \
 	mm-modem-oma.h \
@@ -131,6 +133,7 @@ include_HEADERS = \
 	mm-modem-location.h \
 	mm-modem-time.h \
 	mm-modem-firmware.h \
+	mm-modem-sar.h \
 	mm-modem-signal.h \
 	mm-modem-oma.h \
 	mm-modem-simple.h \
