ci: build with QRTR support by default

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -157,7 +157,7 @@ build-default:
     - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
     - pushd libqmi
     - NOCONFIGURE=1 ./autogen.sh
-    - ./configure --prefix=/usr --enable-mbim-qmux --enable-collection=basic
+    - ./configure --prefix=/usr --enable-mbim-qmux --enable-qrtr --enable-collection=basic
     - make
     - make install
     - popd
