--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ build-no-qmi:
     - make check
     - make install
 
-build-qrtr-no-mbim:
+build-qmi-qrtr-no-mbim:
   stage: build
   only:
     - master
@@ -44,12 +44,12 @@ build-qrtr-no-mbim:
     - make install
     - popd
     - NOCONFIGURE=1 ./autogen.sh
-    - ./configure --prefix=/tmp/build-qrtr-no-mbim --disable-gtk-doc --without-mbim
+    - ./configure --prefix=/tmp/build-qmi-qrtr-no-mbim --disable-gtk-doc --without-mbim
     - make
     - make check
     - make install
 
-build-no-mbim:
+build-qmi-no-qrtr-no-mbim:
   stage: build
   only:
     - master
@@ -60,12 +60,12 @@ build-no-mbim:
     - git clone --depth 1 https://gitlab.freedesktop.org/mobile-broadband/libqmi.git
     - pushd libqmi
     - NOCONFIGURE=1 ./autogen.sh
-    - ./configure --prefix=/usr --disable-mbim-qmux --enable-collection=basic
+    - ./configure --prefix=/usr --disable-mbim-qmux --disable-qrtr --enable-collection=basic
     - make
     - make install
     - popd
     - NOCONFIGURE=1 ./autogen.sh
-    - ./configure --prefix=/tmp/build-no-mbim --disable-gtk-doc --without-mbim
+    - ./configure --prefix=/tmp/build-qmi-no-qrtr-no-mbim --disable-gtk-doc --without-mbim
     - make
     - make check
     - make install
