Update plugins/foxconn/mm-broadband-modem-foxconn-t99w175.c, plugins/foxconn/mm-broadband-modem-foxconn-t99w175.h, plugins/foxconn/mm-foxconn-t99w175-carrier-mapping.conf, plugins/Makefile.am files

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -431,6 +431,8 @@ libmm_shared_foxconn_la_SOURCES = \
 	foxconn/mm-shared.c \
 	foxconn/mm-broadband-modem-foxconn-t77w968.c \
 	foxconn/mm-broadband-modem-foxconn-t77w968.h \
+	foxconn/mm-broadband-modem-foxconn-t99w175.c \
+	foxconn/mm-broadband-modem-foxconn-t99w175.h \
 	$(NULL)
 libmm_shared_foxconn_la_CPPFLAGS = \
 	$(SHARED_COMMON_COMPILER_FLAGS) \
@@ -716,7 +718,10 @@ libmm_plugin_foxconn_la_LDFLAGS = $(PLUGIN_COMMON_LINKER_FLAGS)
 
 dist_udevrules_DATA += foxconn/77-mm-foxconn-port-types.rules
 
-dist_pkgdata_DATA += foxconn/mm-foxconn-t77w968-carrier-mapping.conf
+dist_pkgdata_DATA += \
+	foxconn/mm-foxconn-t77w968-carrier-mapping.conf \
+	foxconn/mm-foxconn-t99w175-carrier-mapping.conf \
+	$(NULL)
 
 AM_CFLAGS += \
 	-DTESTUDEVRULESDIR_FOXCONN=\"${srcdir}/foxconn\" \
